--- a/protoc-gen-bff/bff.tmpl
+++ b/protoc-gen-bff/bff.tmpl
@@ -7,7 +7,7 @@ import (
 	"fmt"
 
 	"{{.GoPackage}}"
-	"bitbucket.org/doozer-de/rest"
+	"github.com/doozer-de/rest"
 	"golang.org/x/net/context"
 	{{range .Imports}}
 		"{{.}}"
