Fix staticcheck error ST1005

--- a/protoc-gen-bff/bff.tmpl
+++ b/protoc-gen-bff/bff.tmpl
@@ -53,7 +53,7 @@ type GeneratedService struct {
 
 func NewGeneratedService(s {{.ServiceType}}, errorHandler rest.ErrorHandler) (*GeneratedService, error) {
 	if s == nil {
-		return nil, fmt.Errorf("The given GRPC Service cannot be null")
+		return nil, fmt.Errorf("the given GRPC Service cannot be null")
 	}
 
 	return &GeneratedService{
